--- a/index.html
+++ b/index.html
@@ -1,1 +1,219 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tobia Miniutti | Fotografo e Videomaker</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      --carbon: #121212;
+      --carbon-deep: #0d0d0d;
+      --golden: #c9a74c;
+      --anthracite: #b3b3b3;
+      --white: #ffffff;
+      --transition: 0.3s ease-in-out;
+      --radius: 20px;
+    }
 
+    * {margin:0; padding:0; box-sizing:border-box;}
+    body {
+      font-family: 'Outfit', sans-serif;
+      background-color: var(--carbon);
+      color: var(--white);
+      -webkit-font-smoothing: antialiased;
+      min-height: 100vh;
+    }
+
+    /* NAVBAR */
+    header {
+      backdrop-filter: blur(14px);
+      background: rgba(255 255 255 / 0.05);
+      padding: 1.3rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1100;
+      box-shadow: 0 2px 25px rgba(0,0,0,0.85);
+    }
+    .logo { height:42px; filter:drop-shadow(0 0 1.5px rgba(0,0,0,0.6)); user-select:none; }
+    nav a {
+      position:relative; color:var(--white); text-decoration:none;
+      font-weight:600; margin-left:2.5rem; padding-bottom:4px;
+      transition:color var(--transition); font-size:1rem;
+    }
+    nav a::after {
+      content:""; position:absolute; bottom:0; left:0; width:0; height:3px;
+      background:linear-gradient(90deg, #008C45, #F4F5F0, #CD212A);
+      transition:width var(--transition);
+    }
+    nav a:hover::after { width:100%; }
+    nav a:hover { color:var(--golden); }
+
+    /* SEZIONE HERO */
+    .hero {
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('hero-bg.jpg') center/cover no-repeat;
+      padding: 10rem 2rem;
+      text-align: center;
+      color: var(--white);
+    }
+    .hero h1 {
+      font-size: 3rem;
+      color: var(--golden);
+      margin-bottom: 1rem;
+      animation: fadeUp 1.2s ease forwards;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      color: var(--anthracite);
+      margin-bottom: 2.5rem;
+      animation: fadeUp 1.5s ease forwards;
+    }
+
+    /* PULSANTI GLOBALI */
+    .btn-golden {
+      display: inline-block;
+      padding: 0.9rem 2rem;
+      font-weight: 600;
+      font-size: 1rem;
+      color: var(--golden);
+      border: 2px solid var(--golden);
+      border-radius: 40px;
+      text-decoration: none;
+      transition: background-color var(--transition), color var(--transition), box-shadow var(--transition);
+    }
+    .btn-golden:hover, .btn-golden:focus-visible {
+      background-color: var(--golden);
+      color: var(--carbon);
+      box-shadow: 0 8px 20px rgba(201, 167, 76, 0.5);
+    }
+
+    /* SEZIONI */
+    main { max-width:1100px; margin:auto; padding:4rem 2rem; }
+    .section {
+      background: var(--carbon-deep);
+      border-radius: var(--radius);
+      padding: 3rem 2rem;
+      margin-bottom: 4rem;
+      box-shadow: 0 10px 50px rgba(0,0,0,0.4);
+      transition: transform var(--transition), box-shadow var(--transition);
+    }
+    .section:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 15px 60px rgba(0,0,0,0.5);
+    }
+    .section h2 {
+      color: var(--golden);
+      font-size: 2.2rem;
+      margin-bottom: 1.2rem;
+      text-align: center;
+    }
+    .section p {
+      text-align: center;
+      color: var(--anthracite);
+      font-size: 1.1rem;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto 2rem auto;
+    }
+    .center { text-align:center; }
+
+    /* FOOTER */
+    footer {
+      background: var(--carbon-deep);
+      padding: 3rem 2rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+      gap: 2rem;
+      border-top: 1px solid rgba(255,255,255,0.05);
+    }
+    .footer-col h4 { color: var(--golden); margin-bottom: 1rem; font-size: 1.2rem; }
+    .footer-col ul { list-style: none; }
+    .footer-col ul li { margin: 0.6rem 0; }
+    .footer-col ul li a { color: var(--anthracite); text-decoration: none; transition: var(--transition); }
+    .footer-col ul li a:hover { color: var(--white); }
+    .footer-bottom {
+      grid-column: 1 / -1;
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: var(--anthracite);
+    }
+
+    /* ANIMAZIONI */
+    @keyframes fadeUp {
+      from {opacity:0; transform:translateY(30px);}
+      to {opacity:1; transform:none;}
+    }
+
+    @media (max-width:768px){
+      .hero h1 {font-size:2.3rem;}
+      .hero p {font-size:1.1rem;}
+      nav a {margin-left:1rem;}
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <a href="index.html"><img src="favicon.png" alt="Logo" class="logo" /></a>
+    <nav>
+      <a href="index.html" aria-current="page">Home</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="contatti.html">Contatti</a>
+      <a href="login.html">Login</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Tobia Miniutti</h1>
+    <p>Fotografo e Videomaker. Racconto storie attraverso luce, movimento e precisione visiva.</p>
+    <a href="portfolio.html" class="btn-golden">Vedi il Portfolio</a>
+  </section>
+
+  <main>
+    <section class="section">
+      <h2>Chi sono</h2>
+      <p>Un giovane creativo con radici tra Svizzera, Germania e Friuli, specializzato in video, fotografia e sviluppo digitale. Unisco visione estetica e tecnica per trasformare idee in immagini concrete e memorabili.</p>
+      <div class="center">
+        <a href="contatti.html" class="btn-golden">Contattami</a>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>Progetti in evidenza</h2>
+      <p>Alcuni dei miei lavori più rappresentativi, tra design visivo, storytelling e produzione tecnica.</p>
+      <div class="center">
+        <a href="portfolio.html" class="btn-golden">Esplora i progetti</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-col">
+      <h4>Tobia Miniutti</h4>
+      <p>Fotografo e Videomaker — Portfolio ufficiale.</p>
+    </div>
+    <div class="footer-col">
+      <h4>Link rapidi</h4>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
+    <div class="footer-col">
+      <h4>Contatti</h4>
+      <ul>
+        <li><a href="mailto:tobia@miniutti.it">tobia@miniutti.it</a></li>
+        <li><a href="tel:+393791128232">+39 379 112 8232</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">© 2025 tobia.me — Tutti i diritti riservati</div>
+  </footer>
+</body>
+</html>
