Update title in 404 page from miniutti.it to tobia.me

--- a/404.html
+++ b/404.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>miniutti.it | Pagina non trovata</title>
+  <title>tobia.me | Pagina non trovata</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet" />
   <style>
